# lolcat

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust.yml
src/: main.rs
