[package]
name = "lolcat"
version = "0.1.0"
authors = ["Dan White <github@bluetufa.com>"]
categories = ["command line utilities"]
description = "A cat utility with lols"
repository = "https://github.com/BlueTufa/lolcat"
keywords = ["cat", "command-line", "utilities", "rust"]
license = "Apache-2.0"
license-file = "LICENSE"
version = "0.1.0"
readme = "README.md"
edition = "2018"

[dependencies]
ansi_term = "0.11.0"
rand = "0.5.5"

